--- a/bin/general/index2Screen.fxml
+++ b/bin/general/index2Screen.fxml
@@ -13,14 +13,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="general.IndexControllerD">
    <children>
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" VBox.vgrow="ALWAYS">
          <left>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="663.0" prefWidth="270.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" style="-fx-background-color: #F7C665;" VBox.vgrow="ALWAYS">
+                  <HBox alignment="CENTER" prefHeight="655.0" prefWidth="211.0" style="-fx-background-color: #F7C665;" VBox.vgrow="ALWAYS">
                      <children>
                         <GridPane fx:id="options_grid1" alignment="TOP_CENTER" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="661.0" prefWidth="150.0" style="-fx-background-color: #F7C665;">
                           <columnConstraints>
@@ -46,11 +45,11 @@
          <top>
             <HBox layoutX="100.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="145.0" prefWidth="999.0" BorderPane.alignment="CENTER">
                <children>
-                  <AnchorPane prefHeight="145.0" prefWidth="266.0" style="-fx-background-color: #F9E3B4;">
+                  <AnchorPane prefHeight="145.0" prefWidth="270.0" style="-fx-background-color: #F9E3B4;">
                      <children>
                         <ImageView fitHeight="103.0" fitWidth="85.0" layoutX="-3.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true" translateX="90.0" translateY="70.0">
                            <image>
-                              <Image url="@MaleIcon.png" />
+                              <Image url="@../img/MaleIcon.png" />
                            </image>
                         </ImageView>
                         <Label fx:id="hello_label" prefHeight="25.0" prefWidth="183.0" text="Label" textAlignment="CENTER" translateX="80.0" translateY="40.0">
