--- a/src/gui/order/CartItem.fxml
+++ b/src/gui/order/CartItem.fxml
@@ -7,31 +7,36 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartItemController">
+
+<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartItemController">
    <children>
-      <VBox layoutX="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
          <children>
-            <HBox alignment="CENTER_LEFT">
+            <VBox layoutX="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label fx:id="dish_name_lbl" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Name">
-                     <HBox.margin>
-                        <Insets right="10.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label fx:id="dish_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Price">
-                     <HBox.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Button id="minus_btn" fx:id="remove_btn" mnemonicParsing="false" onAction="#removeItem" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="-" textFill="WHITE">
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
-                  </Button>
+                  <HBox alignment="CENTER_LEFT">
+                     <children>
+                        <Label fx:id="dish_name_lbl" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Name">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label fx:id="dish_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Dish Price">
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Button id="minus_btn" fx:id="remove_btn" mnemonicParsing="false" onAction="#removeItem" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="-" textFill="WHITE">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <VBox fx:id="chosen_dish_options_vbox" />
                </children>
-            </HBox>
-            <VBox fx:id="chosen_dish_options_vbox" />
+            </VBox>
          </children>
-      </VBox>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</VBox>
