--- a/src/gui/order/CartScreen.fxml
+++ b/src/gui/order/CartScreen.fxml
@@ -8,45 +8,50 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartController">
+
+<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.CartController">
    <children>
-      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane>
          <children>
-            <HBox>
+            <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <ScrollPane hbarPolicy="NEVER" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
-                     <content>
-                        <VBox fx:id="cart_items_vbox" />
-                     </content>
-                  </ScrollPane>
+                  <HBox>
+                     <children>
+                        <ScrollPane hbarPolicy="NEVER" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
+                           <content>
+                              <VBox fx:id="cart_items_vbox" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </HBox>
+                  <HBox minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Total Price: ">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label fx:id="total_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="price">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <Button fx:id="checkout_btn" mnemonicParsing="false" onAction="#checkout" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Checkout" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <HBox minHeight="-Infinity" minWidth="-Infinity">
-               <children>
-                  <Label styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Total Price: ">
-                     <HBox.margin>
-                        <Insets right="10.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label fx:id="total_price_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="price">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity">
-               <children>
-                  <Button fx:id="checkout_btn" mnemonicParsing="false" onAction="#checkout" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Checkout" />
-               </children>
-            </HBox>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
+      </AnchorPane>
    </children>
-</AnchorPane>
+</VBox>
