--- a/src/gui/order/ChooseSupplierScreen.fxml
+++ b/src/gui/order/ChooseSupplierScreen.fxml
@@ -3,45 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="650.0" prefWidth="1010.0" styleClass="pane" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.ChooseSupplierController">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Choose Supplier" textAlignment="CENTER">
-                           <font>
-                              <Font size="40.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <ComboBox fx:id="choose_branch_combo_box" prefHeight="31.0" prefWidth="155.0" promptText="Choose Branch" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="view_menu_btn" mnemonicParsing="false" onAction="#viewMenu" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="View Menu" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-         </center>
-      </BorderPane>
+      <Pane prefHeight="650.0" prefWidth="1010.0">
+         <children>
+            <Button fx:id="view_menu_btn" layoutX="464.0" layoutY="369.0" mnemonicParsing="false" onAction="#viewMenu" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="View Menu" />
+            <ComboBox fx:id="choose_branch_combo_box" layoutX="431.0" layoutY="287.0" prefHeight="31.0" prefWidth="155.0" promptText="Choose Restaurant" styleClass="comboBox" stylesheets="@../general/GeneralStyleSheet.css" />
+            <Button fx:id="back_btn" layoutX="23.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="57.0" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
+            <Label id="title_lbl" alignment="CENTER" layoutX="348.0" layoutY="178.0" prefHeight="45.0" prefWidth="315.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Restaurant" textAlignment="CENTER" textFill="#333333">
+               <font>
+                  <Font name="SansSerif Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
-</AnchorPane>
+</VBox>
