--- a/src/gui/order/PaymentScreen.fxml
+++ b/src/gui/order/PaymentScreen.fxml
@@ -6,23 +6,19 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentController">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <Pane BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label id="title_lbl" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Payment Method" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
+                  <HBox alignment="CENTER_LEFT" layoutX="228.0" layoutY="182.0">
                      <children>
                         <RadioButton fx:id="private_btn" mnemonicParsing="false" selected="true" text="Private Order">
                            <toggleGroup>
@@ -34,15 +30,16 @@
                         </RadioButton>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT">
+                  <HBox alignment="CENTER_LEFT" layoutX="228.0" layoutY="219.0">
                      <children>
                         <RadioButton fx:id="buisness_btn" mnemonicParsing="false" text="Buisness Order" toggleGroup="$payment_type">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin></RadioButton>
+                           </HBox.margin>
+                        </RadioButton>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT">
+                  <HBox alignment="CENTER_LEFT" layoutX="236.0" layoutY="265.0">
                      <children>
                         <TextField fx:id="employer_name_input" disable="true" promptText="Employer Name" styleClass="text-box" stylesheets="@../general/GeneralStyleSheet.css">
                            <HBox.margin>
@@ -56,13 +53,8 @@
                         </TextField>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" layoutX="288.0" layoutY="350.0" prefHeight="100.0" prefWidth="275.0">
                      <children>
-                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                        </Button>
                         <Button fx:id="pay_btn" mnemonicParsing="false" onAction="#payAndCompleteOrder" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Pay And Complete Order">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -70,8 +62,10 @@
                         </Button>
                      </children>
                   </HBox>
+                  <Label id="title_lbl" layoutX="268.0" layoutY="86.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Payment Method" />
+                  <Button fx:id="back_btn" layoutX="22.0" layoutY="603.0" mnemonicParsing="false" onAction="#back" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
                </children>
-            </VBox>
+            </Pane>
          </center>
          <right>
             <VBox BorderPane.alignment="CENTER">
@@ -109,4 +103,4 @@
          </right>
       </BorderPane>
    </children>
-</AnchorPane>
+</VBox>
