--- a/src/gui/order/chooseSupplyWayScreen.fxml
+++ b/src/gui/order/chooseSupplyWayScreen.fxml
@@ -4,56 +4,40 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="pane" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.SupplyWayController">
+<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.SupplyWayController">
    <children>
-      <BorderPane layoutX="300.0" layoutY="171.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="650.0" prefWidth="1010.0">
+         <children>
+            <Label id="title_lbl" alignment="CENTER" layoutX="348.0" layoutY="235.0" prefHeight="45.0" prefWidth="315.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Supply Method" textAlignment="CENTER" textFill="#333333">
+               <font>
+                  <Font name="SansSerif Bold" size="18.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" layoutX="406.0" layoutY="296.0" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label id="title_lbl" prefHeight="45.0" prefWidth="315.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Supply Method" textAlignment="CENTER" textFill="#333333">
-                           <font>
-                              <Font name="SansSerif Bold" size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="delivery_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                           <styleClass>
-                              <String fx:value="btn" />
-                              <String fx:value="btn" />
-                           </styleClass>
-                        </Button>
-                        <Button fx:id="take_away_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away">
-                           <HBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#backFunc" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
-                           <HBox.margin>
-                              <Insets left="20.0" />
-                           </HBox.margin></Button>
-                     </children>
-                  </HBox>
+                  <Button fx:id="delivery_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#delivery" stylesheets="@../general/GeneralStyleSheet.css" text="Delivery">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn" />
+                     </styleClass>
+                  </Button>
+                  <Button fx:id="take_away_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#takeAway" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Take-Away">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
-            </VBox>
-         </center>
-      </BorderPane>
+            </HBox>
+            <Button fx:id="back_btn" layoutX="14.0" layoutY="593.0" mnemonicParsing="false" onAction="#backFunc" styleClass="btn" stylesheets="@../general/GeneralStyleSheet.css" text="Back" />
+         </children>
+      </Pane>
    </children>
-</AnchorPane>
+</VBox>
